v3.17.1
- Fixed: Ensure only one call to GetEPGForChannel happens at one time, fixes #181
- Added: Update/fix server version for pvr addon
- Added: Option to skip initial EPG Load
- Fixed: Fix for zap on channel change for dreamboxes

v3.17.0
- Added: Recording EDL support
- Added: Update Timer Types to display correctly in Manual vs EPG UIs
- Added: Updated show info regex's
- Fixed: Timer Recording not displaying description - Not being stored on STB - AddTimer Call, fixes #174
- Fixed: Fix for uncaught type_error for nlohmann/json
- Fixed: Include TV Favourites channels by default in settings
- Added: Support Last Scanned for both TV and Radio, fixes #178
- Fixed: Null pointer check for Genre EPG data from XML

v3.16.2
- Fixed: Seg fault on shutdown - Timer Updates thread accessing released object, fixes #172
- Fixed: Incorrectly used time_t instead int64 in GetStreamTimes, fixes #171
- Added: Load Addon Version
- Fixed: Clean up/partition addon debug log, fixes #159
- Added: Add user defined delay between EPG Channel Updates, fixes #158
- Added: Enable Trace Logging in debug mode
- Added: Integrate Stream API details with Tuners
- Fixed: JSON API requires version 1.3.5+ of OpenWebIf, fixes #169
- Added: updated language files from Transifex

v3.16.1
- Fixed: Backend polled too often for Signal Quality, fixes #165
- Fixed: SNR and Signal showing as zero in PVR info overlay, fixes #164
- Fixed: When playing a current recording duration at end time is wrong, fixes #160
- Fixed: Plugin won't load channels after upgrade to 3.16.0, fixes #161

v3.16.0
- Added: Tuners and SignalStatus
- Added: Use Picon Path from OpenWebIf
- Fixed: Change startup issue log statements from Debug to Error, fixes #157

v3.15.5
- Added: updated language files from Transifex

v3.15.4
- Fixed: In 3.15.2 WebIf that is not OpenWebIf does not support auto timer API - Addon won't load Newnigma2 image, fixes #151

v3.15.3
- Fixed: GetStreamTimes not implemented for Recordings, fixes #148